--- a/curriculum-vitae.html
+++ b/curriculum-vitae.html
@@ -2,10 +2,12 @@
 <html>
 
 <head>
-    <title>Steidler | About Me</title>
+    <title>Steidler | Curriculum Vitae</title>
     <meta charset="utf-8">
+    <link rel="stylesheet" href="about-me-style.css">
     <link rel="stylesheet" href="style.css">
-    <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600;700&display=swap"
+        rel="stylesheet">
 </head>
 
 <body>
@@ -13,7 +15,7 @@
         <nav>
             <ul class="header-menu">
                 <li class="header-menu-item"><a href="index.html">Home</a></li>
-                <li class="header-menu-item"><a href="#">About Me</a></li>
+                <li class="header-menu-item"><a href="curriculum-vitae.html">Curriculum Vitae</a></li>
                 <li class="header-menu-item"><a href="#">Blog</a></li>
                 <li class="header-menu-item"><a href="#">Reviews</a></li>
                 <li class="header-menu-item"><a href="#">Portfolio</a></li>
@@ -23,7 +25,11 @@
     </header>
 
     <main>
+
         <section class="character-sheet">
+            <img id="dice1" class="dice-img" src="images\curriculum_vitae\dice1.png" alt="Dice 1">
+            <img id="dice2" class="dice-img" src="images\curriculum_vitae\dice2.png" alt="Dice 2">
+            <img class="pencil-img" src="images\curriculum_vitae\pencil.png" alt="Pencil">
             <div class="heading">
                 <h1>Character Sheet</h1>
             </div>
@@ -62,7 +68,7 @@
                         <th>Personality Type</th>
                     </tr>
                     <tr>
-                        <td>UHK Graduate</td>
+                        <td>Self-taught</td>
                         <td>Czech</td>
                         <td>INTJ</td>
                     </tr>
@@ -71,7 +77,7 @@
 
             <section class="portrait">
                 <h2>Portrait</h2>
-                <img src="images/portrait.jpg" alt="Portrait of Martin Šteidler">
+                <img src="images/curriculum_vitae/portrait.jpg" alt="Portrait of Martin Šteidler">
             </section>
 
             <section class="attributes">
@@ -112,11 +118,10 @@
                         <h3>Proficiencies</h3>
                         <ul>
                             <li>Project Implementation and Completion</li>
-                            <li>Documentation Creation</li>
+                            <li>Documentation</li>
                             <li>System Design and Maintenance</li>
                             <li>Prompt Engineering</li>
-                            <li>Web Development</li>
-                            <li>Cybersecurity and protection</li>
+                            <li>Cybersecurity and Protection</li>
                             <li>Multidisciplinarity</li>
                         </ul>
                     </div>
@@ -137,11 +142,6 @@
                                 <td>&#8226;</td>
                                 <td>Spanish</td>
                                 <td>★★☆☆☆</td>
-                            </tr>
-                            <tr>
-                                <td>&#8226;</td>
-                                <td>HTML</td>
-                                <td>★★★★☆</td>
                             </tr>
                             <tr>
                                 <td>&#8226;</td>
@@ -174,8 +174,6 @@
                         technologies and paradigms.</li>
                     <li><strong>Problem-Solving:</strong> Excellent analytical skills, with a proven track record of
                         deciphering complex problems and delivering effective solutions.</li>
-                    <li><strong>Communication:</strong> Articulate communicator, able to explain technical concepts
-                        to non-technical audiences effectively.</li>
                     <li><strong>Creativity:</strong> Innovative thinker, often sees out-of-the-box solutions that
                         others miss.</li>
                     <li><strong>Determination:</strong> Persistent in the face of challenges, always striving to
@@ -203,6 +201,7 @@
     </footer>
 
     <script src="script.js"></script>
+
 </body>
 
 </html>
