--- a/index.html
+++ b/index.html
@@ -2,19 +2,19 @@
 <html>
 
 <head>
-    <title>Steidler - Personal website</title>
-
+    <title>Steidler | Home</title>
     <meta charset="utf-8">
-
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="home-style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600;700&display=swap" rel="stylesheet">
 </head>
 
 <body>
     <header>
         <nav>
             <ul class="header-menu">
-                <li class="header-menu-item"><a href="#">Home</a></li>
-                <li class="header-menu-item"><a href="about-me.html">About Me</a></li> <!-- Really? -->
+                <li class="header-menu-item"><a href="index.html">Home</a></li>
+                <li class="header-menu-item"><a href="curriculum-vitae.html">Curriculum Vitae</a></li>
                 <li class="header-menu-item"><a href="#">Blog</a></li>
                 <li class="header-menu-item"><a href="#">Reviews</a></li>
                 <li class="header-menu-item"><a href="#">Portfolio</a></li>
@@ -22,14 +22,66 @@
             </ul>
         </nav>
     </header>
+
     <main>
-        
+        <section class="welcome">
+            <h1>Welcome to my personal webpage!</h1>
+            <div class="paragraph-with-image">
+                <p>
+                    <img src="images\home\bitcoin_ai_3d_print.png" alt="Robot Reading a Book" class="left-image">
+                    Hello! I’m <b>Martin Šteidler</b>, and this is my personal webpage. I’m glad you’re here, because I want to
+                    share
+                    with you a little bit about myself and what I do. I’m currently working as an <b>IT Analyst</b> at
+                    <b>ČSOB</b>. I am passionate about
+                    <b>Bitcoin, Deep Learning, AI, 3D Printing, Robotics and Automation</b> and I love to share my work
+                    and
+                    insights with the world. I started learning about the <b>IT world</b> when I was <b>19</b>, and
+                    since
+                    then I’ve never stopped exploring and experimenting with new technologies and tools. I’m also a
+                    <b>biohacker</b>, and I enjoy <b>tracking and analyzing</b> various aspects of my health and
+                    performance.
+                    I believe that <b>data is power</b>, and that by measuring and optimizing our biometrics, we can
+                    achieve
+                    our full potential.
+                </p>
+            </div>
+            <div class="paragraph-with-image">
+                <p>
+                    <img src="images\home\chess_books_nature.png" alt="Chess, Books and Nature" class="right-image">
+                    Besides my professional interests, I also have some personal hobbies that show my personality and
+                    passions. For example, I enjoy <b>reading classical works of literature</b> from different eras and
+                    regions. I admire the beauty and wisdom of the language and the stories. I love <b>playing chess</b>
+                    with my friends and online opponents. I find it challenging and rewarding to apply my strategic
+                    thinking
+                    and problem-solving skills. I also like to <b>spend time in nature</b> I appreciate the tranquility
+                    and
+                    harmony of the natural environment and the opportunity to reconnect with myself.
+                    In addition, I <b>work out occasionally</b> to keep myself fit and healthy.
+                    I also <b>study pedagogy and economy</b> in my free time, as I am interested
+                    in learning more about human behavior and social systems.
+                </p>
+            </div>
+            <p>
+                If you’re interested in working with me, please feel free to contact me anytime. I’d love to hear from
+                you and learn more about your project, your goals, and your expectations. I’m confident that we can work
+                together and create something amazing. Thank you for visiting my webpage, and I hope to hear from you
+                soon.
+            </p>
+        </section>
     </main>
+
     <footer>
-        <p>&copy; 2023 Martin Šteidler. All rights reserved.</p>
-        <p>LinkedIn link</p>
-        <p>GitHub link</p>
+        <div class="disclaimer">
+            <p>&copy; 2023 Martin Šteidler. All rights reserved.</p>
+        </div>
+        <div class="social-media-links">
+            <a href="https://www.linkedin.com/in/martin-steidler/"><img src="images\social_media\In-White-128.png"
+                    alt="LinkedIn logo"></a>
+            <a href="https://github.com/Miridar/"><img src="images\social_media\github-mark-white.png"
+                    alt="GitHub logo"></a>
+        </div>
     </footer>
+
 </body>
 
 
