Block mock and minor changes in design

--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
-<!DOCTYPE html>
-<html>
+<html class=" nouojmfa idc0_349">
 
 <head>
     <title>Steidler | Home</title>
     <meta charset="utf-8">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="home-style.css">
-    <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600;700&amp;display=swap"
+        rel="stylesheet">
 </head>
 
 <body>
@@ -15,7 +15,7 @@
             <ul class="header-menu">
                 <li class="header-menu-item"><a href="index.html">Home</a></li>
                 <li class="header-menu-item"><a href="curriculum-vitae.html">Curriculum Vitae</a></li>
-                <li class="header-menu-item"><a href="#">Blog</a></li>
+                <li class="header-menu-item"><a href="blog.html">Blog</a></li>
                 <li class="header-menu-item"><a href="#">Reviews</a></li>
                 <li class="header-menu-item"><a href="#">Portfolio</a></li>
                 <li class="header-menu-item"><a href="#">Contact</a></li>
@@ -25,11 +25,12 @@
 
     <main>
         <section class="welcome">
-            <h1>Welcome to my personal webpage!</h1>
+            <h1>Welcome to my Personal Website!</h1>
             <div class="paragraph-with-image">
                 <p>
                     <img src="images\home\bitcoin_ai_3d_print.png" alt="Robot Reading a Book" class="left-image">
-                    Hello! I’m <b>Martin Šteidler</b>, and this is my personal webpage. I’m glad you’re here, because I want to
+                    Hello! I’m <b>Martin Šteidler</b>, and this is my personal website. I’m glad you’re here, because I
+                    want to
                     share
                     with you a little bit about myself and what I do. I’m currently working as an <b>IT Analyst</b> at
                     <b>ČSOB</b>. I am passionate about
@@ -64,7 +65,7 @@
             <p>
                 If you’re interested in working with me, please feel free to contact me anytime. I’d love to hear from
                 you and learn more about your project, your goals, and your expectations. I’m confident that we can work
-                together and create something amazing. Thank you for visiting my webpage, and I hope to hear from you
+                together and create something amazing. Thank you for visiting my website, and I hope to hear from you
                 soon.
             </p>
         </section>
@@ -72,7 +73,7 @@
 
     <footer>
         <div class="disclaimer">
-            <p>&copy; 2023 Martin Šteidler. All rights reserved.</p>
+            <p>© 2023 Martin Šteidler. All rights reserved.</p>
         </div>
         <div class="social-media-links">
             <a href="https://www.linkedin.com/in/martin-steidler/"><img src="images\social_media\In-White-128.png"
@@ -82,7 +83,9 @@
         </div>
     </footer>
 
-</body>
 
+
+
+</body>
 
 </html>
