--- a/curriculum-vitae.html
+++ b/curriculum-vitae.html
@@ -2,9 +2,9 @@
 <html>
 
 <head>
-    <title>Steidler | Curriculum Vitae</title>
+    <title>Šteidler | Curriculum Vitae</title>
     <meta charset="utf-8">
-    <link rel="stylesheet" href="about-me-style.css">
+    <link rel="stylesheet" href="curriculum-vitae.css">
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600;700&display=swap"
         rel="stylesheet">
@@ -16,7 +16,7 @@
             <ul class="header-menu">
                 <li class="header-menu-item"><a href="index.html">Home</a></li>
                 <li class="header-menu-item"><a href="curriculum-vitae.html">Curriculum Vitae</a></li>
-                <li class="header-menu-item"><a href="#">Blog</a></li>
+                <li class="header-menu-item"><a href="blog.html">Blog</a></li>
                 <li class="header-menu-item"><a href="#">Reviews</a></li>
                 <li class="header-menu-item"><a href="#">Portfolio</a></li>
                 <li class="header-menu-item"><a href="#">Contact</a></li>
@@ -27,8 +27,7 @@
     <main>
 
         <section class="character-sheet">
-            <img id="dice1" class="dice-img" src="images\curriculum_vitae\dice1.png" alt="Dice 1">
-            <img id="dice2" class="dice-img" src="images\curriculum_vitae\dice2.png" alt="Dice 2">
+            <img class="dice-img" src="images\curriculum_vitae\dice1.png" alt="Dice 1">
             <img class="pencil-img" src="images\curriculum_vitae\pencil.png" alt="Pencil">
             <div class="heading">
                 <h1>Character Sheet</h1>
