Added Reviews and Contact

--- a/curriculum-vitae.html
+++ b/curriculum-vitae.html
@@ -4,7 +4,7 @@
 <head>
     <title>Šteidler | Curriculum Vitae</title>
     <meta charset="utf-8">
-    <link rel="stylesheet" href="curriculum-vitae.css">
+    <link rel="stylesheet" href="curriculum-vitae-style.css">
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600;700&display=swap"
         rel="stylesheet">
@@ -17,9 +17,8 @@
                 <li class="header-menu-item"><a href="index.html">Home</a></li>
                 <li class="header-menu-item"><a href="curriculum-vitae.html">Curriculum Vitae</a></li>
                 <li class="header-menu-item"><a href="blog.html">Blog</a></li>
-                <li class="header-menu-item"><a href="#">Reviews</a></li>
-                <li class="header-menu-item"><a href="#">Portfolio</a></li>
-                <li class="header-menu-item"><a href="#">Contact</a></li>
+                <li class="header-menu-item"><a href="reviews.html">Reviews</a></li>
+                <li class="header-menu-item"><a href="contact.html">Contact</a></li>
             </ul>
         </nav>
     </header>
@@ -199,7 +198,7 @@
         </div>
     </footer>
 
-    <script src="script.js"></script>
+    <script src="scripts\calculateLevel.js"></script>
 
 </body>
 
