--- a/index.html
+++ b/index.html
@@ -17,9 +17,8 @@
                 <li class="header-menu-item"><a href="index.html">Home</a></li>
                 <li class="header-menu-item"><a href="curriculum-vitae.html">Curriculum Vitae</a></li>
                 <li class="header-menu-item"><a href="blog.html">Blog</a></li>
-                <li class="header-menu-item"><a href="#">Reviews</a></li>
-                <li class="header-menu-item"><a href="#">Portfolio</a></li>
-                <li class="header-menu-item"><a href="#">Contact</a></li>
+                <li class="header-menu-item"><a href="reviews.html">Reviews</a></li>
+                <li class="header-menu-item"><a href="contact.html">Contact</a></li>
             </ul>
         </nav>
     </header>
